--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,10 @@
             <artifactId>keycloak-spring-boot-starter</artifactId>
             <version>23.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
