--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,10 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version> <!-- Check for the latest version -->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
